Trying to fix bug that allows movement of game to shift when you click a cell that already has a marker in it. Now I'm about to refactor the movement function, so saving before I do that in case I muck things up too much.

--- a/styles/main.css
+++ b/styles/main.css
@@ -105,6 +105,10 @@ a {
   pointer-events: none;
 }
 
+.inactive-cell {
+  pointer-events: none;
+}
+
 .player-one-win {
   background-color: red;
 }
